tests/typing/bad/testfile-tuple-1.rs


fn main() {
    let x = (1u32, 3i32);

    let y = x.0 + x.1;
}